@@ -1,3 +1,8 @@
+2002-09-29  Reiner Patommel  <rpato@post4.tele.dk>
+
+	* libm/fplib/atan.S, libm/fplib/atan2.S: Fix swapped atan2()
+	arguments to match C standards.
+
 2002-09-27  Theodore A. Roth  <troth@verinet.com>
 
 	* libc/stdlib/malloc.c: Remove cast from STACK_POINTER macro.
